--- a/css/style.css
+++ b/css/style.css
@@ -1561,6 +1561,9 @@ img{
     height: auto;
 }
 /*================= Reusable CSS Classes ===================*/ 
+.container {
+    margin-left: 4px;
+}
 
 .grid {
     display: grid;
