--- a/css/style.css
+++ b/css/style.css
@@ -1564,7 +1564,7 @@ img{
 .container {
     margin-left: 4px;
     margin-top: -2px;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
